--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ certifi==2024.7.4
 cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
+dataclasses-json==0.6.7
 distlib==0.3.8
 distro==1.9.0
 exceptiongroup==1.2.2
@@ -32,16 +33,20 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-langchain==0.2.14
-langchain-core==0.2.35
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-core==0.2.38
+langchain-experimental==0.0.65
 langchain-openai==0.1.22
 langchain-text-splitters==0.2.2
 langsmith==0.1.104
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 mccabe==0.7.0
 mdurl==0.1.2
 multidict==6.0.5
+mypy-extensions==1.0.0
 narwhals==1.5.5
 nodeenv==1.9.1
 numpy==1.26.4
@@ -79,6 +84,7 @@ tiktoken==0.7.0
 toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
